--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,7 @@
       skip: true
       paths:
         - '{{ role_path }}/vars'
-- name: check for existing install
+- name: check for existing install in {{ mitmproxy_install_dir }}
   become: yes
   stat:
     path: '{{ mitmproxy_install_dir }}'
@@ -17,37 +17,37 @@
   register: mitmproxy_binary
 - when: not mitmproxy_binary.stat.exists
   block:
-    - name: download
+    - name: downloading {{ mitmproxy_url }} to {{ mitmproxy_tmp_archive }}
       become: yes
       become_user: root
       get_url:
         url: '{{ mitmproxy_url }}'
-        dest: /tmp/{{ mitmproxy_archive }}
+        dest: '{{ mitmproxy_tmp_archive }}'
         checksum: '{{ mitmproxy_checksum }}'
         mode: 0644
-    - name: mkdir
+    - name: mkdir {{ mitmproxy_install_dir }}
       become: yes
       become_user: root
       file:
         path: '{{ mitmproxy_install_dir }}'
         state: directory
         mode: 0755
-    - name: unarchive
+    - name: unarchive {{ mitmproxy_tmp_archive }} to {{ mitmproxy_install_dir }}
       become: yes
       become_user: root
       unarchive:
         remote_src: yes
-        src: /tmp/{{ mitmproxy_archive }}
+        src: '{{ mitmproxy_tmp_archive }}'
         dest: '{{ mitmproxy_install_dir }}'
         creates: '{{ mitmproxy_installed_exe }}'
   always:
-    - name: cleanup
+    - name: rm {{ mitmproxy_tmp_archive }}
       become: yes
       become_user: root
       file:
-        path: /tmp/{{ mitmproxy_archive }}
+        path: '{{ mitmproxy_tmp_archive }}'
         state: absent
-- name: link
+- name: link {{ mitmproxy_link }} to {{ mitmproxy_installed_exe }}
   become: yes
   become_user: root
   file:
