--- a/test.yml
+++ b/test.yml
@@ -2,3 +2,9 @@
 - hosts: all
   roles:
   - role: '{{ playbook_dir }}'
+  tasks:
+  - command: /usr/local/bin/mitmproxy --version
+    register: mitmproxy_test_output
+  - name: mitmproxy --version
+    debug:
+      msg: '{{ mitmproxy_test_output.stdout }}'
