--- a/meta/main.yml
+++ b/meta/main.yml
@@ -34,3 +34,5 @@ galaxy_info:
 dependencies:
   - role: andrewrothstein.unarchive-deps
     version: v1.2.1
+  - role: andrewrothstein.alpine-glibc-shim
+    version: v2.0.15
