--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,15 @@
 ---
 galaxy_info:
   author: Andrew Rothstein
-  description: installs mitmproxy
   company: BlackRock Financial Management
-  license:
-    - MIT
-  min_ansible_version: 2.0
+  description: installs mitmproxy
+  galaxy_tags:
+    - development
+  license: MIT
+  min_ansible_version: '2.0'
+  namespace: andrewrothstein
   platforms:
-    - name: Archlinux
+    - name: ArchLinux
       versions:
         - all
     - name: Debian
@@ -16,15 +18,13 @@ galaxy_info:
         - bullseye
     - name: EL
       versions:
-        - 9
+        - '9'
     - name: Fedora
       versions:
-        - 37
-        - 38
+        - '38'
+        - '39'
     - name: Ubuntu
       versions:
         - focal
         - jammy
-  galaxy_tags:
-    - development
   role_name: mitmproxy
